ambient/swiss-knife-client.yaml
apiVersion: v1
kind: Pod
metadata:
  name: swiss-knife
  namespace: client
  labels:
    app: swiss
spec:
  serviceAccountName: swissknife
  containers:
  - name: swiss-knife
    image: praqma/network-multitool
    command:
    - /bin/sh
    - -c
    - "trap : TERM INT; sleep infinity & wait"
    resources:
      requests:
        memory: "64Mi"
        cpu: "250m"
      limits:
        memory: "128Mi"
        cpu: "500m"
