ambient/omegaweb-gw.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: omegaweb
  namespace: istio-system
spec:
  gatewayClassName: istio
  listeners:
  - protocol: HTTP
    hostname: omegaweb-amb-a.omegaworld.net
    port: 80
    name: omegaweb-http
    allowedRoutes:
      namespaces:
        from: Same
