ambient/omegaweb-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: omegaweb
  namespace: istio-system
spec:
  parentRefs:
  - name: omegaweb
  hostnames:
  - omegaweb-amb-b.omegaworld.net
  rules:
  - matches:
    - path:
        type: "PathPrefix"
        value: "/kiali"
    backendRefs:
    - name: kiali
      namespace: istio-system
      port: 20001
  - matches:
    - path:
        type: "PathPrefix"
        value: "/"
    backendRefs:
    - name: omegaweb
      namespace: myapp
      port: 5000
